Should everything work correctly

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="kitchen_btn">Kitchen toggle</string>
+    <string name="room_btn">Room toggle</string>
+    <string name="floor_btn">Turn off floor</string>
+    <string name="alarm">Alarm</string>
 </resources>
